<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_movie_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/movie_image_description"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_movie_name"
        android:layout_width="271dp"
        android:layout_height="19dp"
        android:layout_marginStart="108dp"
        android:text="@string/short_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_daterelease"
        android:layout_width="271dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:text="@string/short_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/txt_movie_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_movie_name" />

    <TextView
        android:id="@+id/txt_movie_description"
        android:layout_width="271dp"
        android:layout_height="114dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="7"
        android:text="@string/long_text"
        app:layout_constraintStart_toStartOf="@+id/text_daterelease"
        app:layout_constraintTop_toBottomOf="@+id/text_daterelease" />

</android.support.constraint.ConstraintLayout>